--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -830,3 +830,32 @@ body {
     opacity: 1;
   }
 }
+@media (max-width: 480px) {
+  .hero-title{
+    font-size: 2.8rem;
+  }
+  .members-avatars{
+
+  }
+  .members-count{
+
+  }
+  .hero{
+    padding: 2rem 5% 0rem;
+  }
+  .footer{
+    padding: 0rem 5% 2rem;
+  }
+  .footer-title{
+    font-size: 28px;
+  }
+  .footer-links{
+    font-size: 14px;
+  }
+  .roc{
+    display: block;
+  }
+  .nav-links{
+    
+  }
+}
